# rag

./: .gitignore
benchmarks/beir-benchmarks/: README.md  beir_benchmarks.py  benchmarking_embedding_models.md  requirements.txt  run.yaml
demos/common-deployments/: llama-stack-config.yaml  llamastackdistribution.yaml  postgres-deployment.yaml
demos/kubeflow-pipelines/asr-conversion/: README.md  asr_rag_pipeline.py  asr_rag_pipeline_compiled.yaml  asr_rag_responses.ipynb  requirements.txt
demos/kubeflow-pipelines/pdf-conversion/: README.md  pdf_llama_stack_rag.ipynb  pdf_rag_pipeline.py  pdf_rag_pipeline_compiled.yaml  requirements.txt
demos/kubeflow-pipelines/spreadsheets-conversion/: README.md  requirements.txt  spreadsheets_convert_pipeline.py  spreadsheets_convert_pipeline_compiled.yaml  spreadsheets_rag_responses.ipynb
demos/mcp-server/: .dockerignore  Dockerfile  Dockerfile.openshift  README-Docker.md  README-OpenShift.md  README.md  build-openshift.sh  cursor-mcp-config.json  deploy.sh  docker-compose.yml  openshift-buildconfig.yaml  openshift-deployment.yaml  requirements.txt
demos/mcp-server/docs/: mcp.md
demos/mcp-server/mcp_server/: logger.py  (+2 more)
demos/ragas-evaluation/: Makefile  README.md
demos/redbank-demo/: .gitignore  Makefile  README.md
demos/redbank-demo/chat-bot/ui/: Dockerfile  build_and_deploy.sh  main.py  pyproject.toml  tts.py
demos/redbank-demo/chat-bot/ui/templates/: index.html
demos/redbank-demo/chat-bot/ui/vibe_ui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stack/base/: llama-stack-distribution.yaml
(+87 files in other folders)
